# buildcat

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  regression.py  setup.py  sitecustomize.py
.github/workflows/: regression-tests.yml
artwork/: buildcat-logo.lxo  generate-buildcat-rect.ipynb
buildcat/: __init__.py  action.py  build.py  cli.py  environment.py  hou.py  modo.py  node.py  process.py  queue.py  redshift.py  target.py  test.py  worker.py
buildcat/integrations/modo/: demo.lxo
docs/: .gitignore  Makefile  advanced-setup.rst  anaconda-installation.rst  basic-setup.rst  build.py  buildcat.action.rst  buildcat.build.rst  buildcat.cli.rst  buildcat.environment.rst  buildcat.hou.rst  buildcat.modo.rst  buildcat.node.rst  buildcat.process.rst  buildcat.queue.rst  buildcat.redshift.rst  buildcat.rst  buildcat.target.rst  buildcat.test.rst  buildcat.worker.rst  commands.rst  compatibility.rst  conf.py  contributing.rst  credits.rst  dependencies.rst  design.rst  developers.rst  development.rst  houdini.rst  index.rst  installation.rst  integration.rst  integrations.rst  make.bat  python.inv  reference.rst  release-notes.rst  requirements.txt  setup.rst  (+3 more)
docs/css/: buildcat-rtd.css  buildcat.css
docs/user-guide/: advanced-setup.rst  houdini.rst  integrations.rst  modo.rst  monitoring.rst  multiple-workers.rst  redshift.rst
examples/: houdini.hiplc
examples/supervisord/: client-only.conf  client-server.conf
features/: administrivia.feature  documentation.feature  farm.feature
features/steps/: administrivia.py  administrivia_steps.py  common.py  documentation.py  documentation_steps.py  farm_steps.py  ifd-test.hiplc  test.py
integrations/houdini/: houdini.hiplc  scd__buildcat.hdalc
resources/: scd__buildcat.hdalc
sandbox/: api.ipynb
