[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [{name="Timothy M. Shead", email="tim@shead-custom-design.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "arrow",
    "blessings",
    "redis",
    "rq",
    "tqdm",
]
description = "Lightweight, flexible render farm based on RQ and Redis."
dynamic = ["version"]
maintainers = [{name="Timothy M. Shead", email="tim@shead-custom-design.com"}]
name = "buildcat"
requires-python = ">=3.8"

[project.optional-dependencies]
all = [
    "behave",
    "coverage",
    "ipython",
    "nbsphinx",
    "sphinx >= 3.5",
    "sphinx-argparse",
    "sphinx-gallery < 0.11",
    "sphinx_rtd_theme",
    "sphinx-tabs",
]
doc = [
    "ipython",
    "nbsphinx",
    "sphinx >= 3.5",
    "sphinx-argparse",
    "sphinx-gallery < 0.11",
    "sphinx_rtd_theme",
    "sphinx-tabs",
]

[project.scripts]
buildcat = "buildcat.cli:main"

[project.urls]
"Chat" = "https://github.com/shead-custom-design/buildcat/discussions"
"Coverage" = "https://coveralls.io/r/shead-custom-design/buildcat"
"Documentation" = "https://buildcat.readthedocs.io"
"Issue Tracker" = "https://github.com/shead-custom-design/buildcat/issues"
"Regression Tests" = "https://travis-ci.org/shead-custom-design/buildcat"
"Source" = "https://github.com/shead-custom-design/buildcat"

